[tool.poetry]
name = "policy-enforcement"
version = "0.1.0"
description = ""
authors = ["daniel_modilevsky <daniel.modilevsky@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "python src/main.py"